<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grass_plain"
    android:backgroundTintMode="multiply"
    tools:context=".LevelChoiceActivity">

    <TableLayout
        android:id="@+id/tableOfLevels"
        android:layout_width="687dp"
        android:layout_height="225dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.503">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false">

            <Button
                android:id="@+id/levelButton1"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/hedge_square"
                android:backgroundTint="#923A3535"
                android:backgroundTintMode="multiply"
                android:enabled="false"
                android:fontFamily="@font/bungee_inline"
                android:onClick="buttonClicked"
                android:text="@string/_1"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/levelButton2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/hedge_square"
                android:backgroundTint="#923A3535"
                android:backgroundTintMode="multiply"
                android:enabled="false"
                android:fontFamily="@font/bungee_inline"
                android:onClick="buttonClicked"
                android:text="@string/_2"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/levelButton3"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/hedge_square"
                android:backgroundTint="#923A3535"
                android:backgroundTintMode="multiply"
                android:enabled="false"
                android:fontFamily="@font/bungee_inline"
                android:onClick="buttonClicked"
                android:text="@string/_3"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/levelButton4"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/hedge_square"
                android:backgroundTint="#923A3535"
                android:backgroundTintMode="multiply"
                android:enabled="false"
                android:fontFamily="@font/bungee_inline"
                android:onClick="buttonClicked"
                android:text="@string/_4"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/levelButton5"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/hedge_square"
                android:backgroundTint="#923A3535"
                android:backgroundTintMode="multiply"
                android:enabled="false"
                android:fontFamily="@font/bungee_inline"
                android:onClick="buttonClicked"
                android:text="@string/_5"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/levelButton6"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/hedge_square"
                android:backgroundTint="#923A3535"
                android:backgroundTintMode="multiply"
                android:enabled="false"
                android:fontFamily="@font/bungee_inline"
                android:onClick="buttonClicked"
                android:text="@string/_6"
                android:textColor="@color/black" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/levelButton7"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/hedge_square"
                android:backgroundTint="#923A3535"
                android:backgroundTintMode="multiply"
                android:enabled="false"
                android:fontFamily="@font/bungee_inline"
                android:onClick="buttonClicked"
                android:text="@string/_7"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/levelButton8"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/hedge_square"
                android:backgroundTint="#923A3535"
                android:backgroundTintMode="multiply"
                android:enabled="false"
                android:fontFamily="@font/bungee_inline"
                android:onClick="buttonClicked"
                android:text="@string/_8"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/levelButton9"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/hedge_square"
                android:backgroundTint="#923A3535"
                android:backgroundTintMode="multiply"
                android:enabled="false"
                android:fontFamily="@font/bungee_inline"
                android:onClick="buttonClicked"
                android:text="@string/_9"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/levelButton10"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/hedge_square"
                android:backgroundTint="#923A3535"
                android:backgroundTintMode="multiply"
                android:enabled="false"
                android:fontFamily="@font/bungee_inline"
                android:onClick="buttonClicked"
                android:text="@string/_10"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/levelButton11"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/hedge_square"
                android:backgroundTint="#923A3535"
                android:backgroundTintMode="multiply"
                android:enabled="false"
                android:fontFamily="@font/bungee_inline"
                android:onClick="buttonClicked"
                android:text="@string/_11"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/levelButton12"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/hedge_square"
                android:backgroundTint="#923A3535"
                android:backgroundTintMode="multiply"
                android:enabled="false"
                android:fontFamily="@font/bungee_inline"
                android:onClick="buttonClicked"
                android:text="@string/_12"
                android:textColor="@color/black" />
        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>